--- a/BERTHOMME/html/Decouverte Bootstrap/EXO 2 - avec Bootstrap/maquette1-bs.html
+++ b/BERTHOMME/html/Decouverte Bootstrap/EXO 2 - avec Bootstrap/maquette1-bs.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/exo-maquette1-bs.css">
+    <link rel="stylesheet" href="exo-maquette1-bs.css">
     <title>Maquette 1 avec BS</title>
 </head>
 <body>
