--- a/BERTHOMME/html/Decouverte Less/Exo 4 - maquette 3/index.html
+++ b/BERTHOMME/html/Decouverte Less/Exo 4 - maquette 3/index.html
@@ -54,7 +54,7 @@
         <section id="intro" class="container">
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <h1>Des idées de génie pour les professionnels</h1>
+                    <h1>Des idées de génie pour les <span>professionnels</span></h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, cume.</p>
                     <a href="#">En savoir plus</a>
                 </div>
