--- a/BERTHOMME/html/Decouverte Less/Exo 4 - maquette 3/index.html
+++ b/BERTHOMME/html/Decouverte Less/Exo 4 - maquette 3/index.html
@@ -60,6 +60,16 @@
                 </div>
             </div>
         </section>
+    </section>
+    <!-- FIN INTRO -->
+        
+        <section id="idess" class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <h2>Ici <br><span>des idées de génie</span></h2>
+                    <p id="citation">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic pariatur tenetur repellendus voluptatibus officia maiores sequi! Possimus accusamus harum accusantium, eveniet, et voluptatem asperiores soluta sint reiciendis quos ex ullam!</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam corrupti eveniet obcaecati quibusdam vitae inventore, quis eius non eum. Sint laborum a ipsa, labore culpa perferendis nesciunt quisquam sunt.</p>
+        </section>
     </body>
 <script src="https://cdn.jsdelivr.net/npm/less" ></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
