--- a/AL AMRI/Decouverte JS/index.html
+++ b/AL AMRI/Decouverte JS/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="exos.js"></script>
+    <h1>Exos de JS</h1>
+    <!-- <script src="manupulationString.js"></script> -->
+    <!-- <script src="ifElse.js"></script> -->
+    <script src="switchEtTernaire.js"></script>
 </body>
 </html>
