--- a/AL AMRI/Decouverte JS/index.html
+++ b/AL AMRI/Decouverte JS/index.html
@@ -9,6 +9,7 @@
     <h1>Exos de JS</h1>
     <!-- <script src="manupulationString.js"></script> -->
     <!-- <script src="ifElse.js"></script> -->
-    <script src="switchEtTernaire.js"></script>
+    <!-- <script src="switchEtTernaire.js"></script> -->
+    <script src="lesBouclesForEtWhile.js"></script>
 </body>
 </html>
