--- a/AL AMRI/Decouverte JS/index.html
+++ b/AL AMRI/Decouverte JS/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="manupulationString.js"></script> -->
     <!-- <script src="ifElse.js"></script> -->
     <!-- <script src="switchEtTernaire.js"></script> -->
-    <script src="lesBouclesForEtWhile.js"></script>
+    <!-- <script src="lesBouclesForEtWhile.js"></script> -->
+    <script src="fonction.js"></script>
 </body>
 </html>
