nouveau fichier pour exos

--- a/AL AMRI/Decouverte JS/index.html
+++ b/AL AMRI/Decouverte JS/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="switchEtTernaire.js"></script> -->
     <!-- <script src="lesBouclesForEtWhile.js"></script> -->
     <!-- <script src="fonction.js"></script> -->
-    <script src="tableaux.js"></script>
+    <!-- <script src="tableaux.js"></script> -->
+    <script src="objetLitteral.js"></script>
 </body>
 </html>
