--- a/AL AMRI/Git/index.html
+++ b/AL AMRI/Git/index.html
@@ -17,5 +17,11 @@
             Ceci est un paragraphe
         </p>
     </div>
+
+    <div>
+        <h2>
+            Ceci est un texte en H2
+        </h2>
+    </div>
 </body>
 </html>
