--- a/AL AMRI/Git/index.html
+++ b/AL AMRI/Git/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    
     <div>
         <h1>
             Ceci est un texte en H1
@@ -22,6 +23,11 @@
         <h2>
             Ceci est un texte en H2
         </h2>
+
+        <h3>
+            Ceci est un texte en H3
+        </h3>
+        
     </div>
 </body>
 </html>
