--- a/AL AMRI/Git/index.html
+++ b/AL AMRI/Git/index.html
@@ -23,11 +23,12 @@
         <h2>
             Ceci est un texte en H2
         </h2>
+    </div>
 
+    <div>
         <h3>
             Ceci est un texte en H3
         </h3>
-        
     </div>
 </body>
 </html>
